fix matchlocations styling in dark mode

--- a/projects/pepper/src/styles/app.scss
+++ b/projects/pepper/src/styles/app.scss
@@ -68,6 +68,7 @@ sq-validation-message {
 // are now with this class
 span.matchlocations:not(.sq-inactive) {
     font-weight: 600;
+    color: inherit !important;
     background-color: transparent !important;
 }
 
